[gd_scene load_steps=14 format=3 uid="uid://bb2wrlvmybkcl"]

[ext_resource type="PackedScene" uid="uid://cw31die5kr4j0" path="res://player.tscn" id="1_62hln"]
[ext_resource type="Texture2D" uid="uid://lbwmm5yvui8o" path="res://mini-jam-152.png" id="1_oijvx"]
[ext_resource type="Script" path="res://world.gd" id="1_oxroc"]
[ext_resource type="FontFile" uid="uid://bigkhfv1scadl" path="res://SMOLBLOCKFONT_0.TTF" id="2_rbnge"]
[ext_resource type="PackedScene" uid="uid://cphre3areulf0" path="res://ball.tscn" id="4_3crki"]
[ext_resource type="PackedScene" uid="uid://b7swn5th27axb" path="res://enemy.tscn" id="5_kjdon"]
[ext_resource type="PackedScene" uid="uid://cp2d3uwte0doa" path="res://princess.tscn" id="7_5dod4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnbg"]
atlas = ExtResource("1_oijvx")
region = Rect2(48, 16, 16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ipxvo"]
texture = ExtResource("1_oijvx")
0:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_g7rht"]
sources/1 = SubResource("TileSetAtlasSource_ipxvo")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_klbed"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_axnt0"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tiqd1"]
normal = Vector2(-1, 0)

[node name="World" type="Node2D"]
texture_filter = 1
script = ExtResource("1_oxroc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_top = 160.0
offset_right = 224.0
offset_bottom = 192.0
color = Color(0, 0, 0, 1)

[node name="LevelLabel" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 83.0
offset_right = 141.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_rbnge")
theme_override_font_sizes/font_size = 5
text = "[Wave 0]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesLabel" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 16.0
offset_right = 224.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_rbnge")
theme_override_font_sizes/font_size = 5
text = "Lives"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwordLabel" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_rbnge")
theme_override_font_sizes/font_size = 5
text = "L Click"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShieldLabel" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_rbnge")
theme_override_font_sizes/font_size = 5
text = "R Click"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallsHBox" type="HBoxContainer" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 128.0
offset_right = 224.0
offset_bottom = 24.0
theme_override_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect/BallsHBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_qbnbg")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/ColorRect/BallsHBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_qbnbg")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/ColorRect/BallsHBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_qbnbg")
stretch_mode = 5

[node name="Sword" type="Sprite2D" parent="CanvasLayer/ColorRect"]
show_behind_parent = true
z_index = 2
texture_filter = 1
position = Vector2(32, 11)
texture = ExtResource("1_oijvx")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="Shield" type="Sprite2D" parent="CanvasLayer/ColorRect"]
z_index = 2
texture_filter = 1
position = Vector2(64, 12)
texture = ExtResource("1_oijvx")
hframes = 2
region_enabled = true
region_rect = Rect2(16, 16, 32, 16)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Ground" type="TileMap" parent="."]
z_index = -1
texture_filter = 1
tile_set = SubResource("TileSet_g7rht")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 3, 65536, 1, 3, 131072, 65537, 3, 196608, 1, 3, 262144, 1, 3, 327680, 65537, 3, 393216, 1, 3, 458752, 1, 3, 524288, 65537, 3, 589824, 65537, 3, 1, 65537, 3, 65537, 65537, 3, 131073, 65537, 3, 196609, 65537, 3, 262145, 1, 3, 327681, 65537, 3, 393217, 65537, 3, 458753, 1, 3, 524289, 1, 3, 589825, 1, 3, 2, 1, 3, 65538, 1, 3, 131074, 1, 3, 196610, 65537, 3, 262146, 1, 3, 327682, 65537, 3, 393218, 65537, 3, 458754, 65537, 3, 524290, 65537, 3, 589826, 1, 3, 3, 1, 3, 65539, 65537, 3, 131075, 65537, 3, 196611, 1, 3, 262147, 65537, 3, 327683, 65537, 3, 393219, 65537, 3, 458755, 1, 3, 524291, 1, 3, 589827, 1, 3, 4, 1, 3, 65540, 65537, 3, 131076, 1, 3, 196612, 65537, 3, 262148, 1, 3, 327684, 1, 3, 393220, 65537, 3, 458756, 65537, 3, 524292, 1, 3, 589828, 65537, 3, 5, 65537, 3, 65541, 65537, 3, 131077, 65537, 3, 196613, 1, 3, 262149, 65537, 3, 327685, 65537, 3, 393221, 65537, 3, 458757, 65537, 3, 524293, 65537, 3, 589829, 65537, 3, 6, 65537, 3, 65542, 1, 3, 131078, 1, 3, 196614, 65537, 3, 262150, 1, 3, 327686, 1, 3, 393222, 65537, 3, 458758, 1, 3, 524294, 1, 3, 589830, 1, 3, 7, 1, 3, 65543, 65537, 3, 131079, 65537, 3, 196615, 65537, 3, 262151, 1, 3, 327687, 1, 3, 393223, 1, 3, 458759, 65537, 3, 524295, 1, 3, 589831, 1, 3, 8, 1, 3, 65544, 1, 3, 131080, 1, 3, 196616, 1, 3, 262152, 65537, 3, 327688, 65537, 3, 393224, 65537, 3, 458760, 1, 3, 524296, 1, 3, 589832, 65537, 3, 9, 1, 3, 65545, 1, 3, 131081, 1, 3, 196617, 65537, 3, 262153, 1, 3, 327689, 1, 3, 393225, 1, 3, 458761, 65537, 3, 524297, 1, 3, 589833, 65537, 3, 10, 65537, 3, 65546, 65537, 3, 131082, 65537, 3, 196618, 1, 3, 262154, 1, 3, 327690, 65537, 3, 393226, 65537, 3, 458762, 65537, 3, 524298, 65537, 3, 589834, 65537, 3, 11, 1, 3, 65547, 1, 3, 131083, 65537, 3, 196619, 1, 3, 262155, 1, 3, 327691, 1, 3, 393227, 1, 3, 458763, 65537, 3, 524299, 65537, 3, 589835, 65537, 3, 12, 1, 3, 65548, 65537, 3, 131084, 65537, 3, 196620, 1, 3, 262156, 65537, 3, 327692, 1, 3, 393228, 65537, 3, 458764, 1, 3, 524300, 1, 3, 589836, 1, 3, 655372, 65537, 3, 720908, 1, 3, 13, 1, 3, 65549, 1, 3, 131085, 65537, 3, 196621, 65537, 3, 262157, 65537, 3, 327693, 1, 3, 393229, 65537, 3, 458765, 65537, 3, 524301, 65537, 3, 589837, 65537, 3, 655373, 65537, 3, 720909, 65537, 3, 655360, 1, 3, 720896, 65537, 3, 655361, 1, 3, 720897, 1, 3, 655362, 65537, 3, 720898, 65537, 3, 655363, 65537, 3, 720899, 1, 3, 655364, 65537, 3, 720900, 1, 3, 655365, 65537, 3, 720901, 1, 3, 655366, 65537, 3, 720902, 65537, 3, 655367, 1, 3, 720903, 65537, 3, 655368, 65537, 3, 720904, 65537, 3, 655369, 65537, 3, 720905, 65537, 3, 655370, 65537, 3, 720906, 65537, 3, 655371, 65537, 3, 720907, 65537, 3)

[node name="Player" parent="." instance=ExtResource("1_62hln")]
unique_name_in_owner = true
position = Vector2(40, 88)

[node name="Borders" type="Node2D" parent="."]

[node name="WorldBorder" type="StaticBody2D" parent="Borders"]
position = Vector2(80, 0)
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/WorldBorder"]
shape = SubResource("WorldBoundaryShape2D_klbed")

[node name="WorldBorder2" type="StaticBody2D" parent="Borders"]
position = Vector2(80, 160)
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/WorldBorder2"]
shape = SubResource("WorldBoundaryShape2D_axnt0")

[node name="WorldBorder4" type="StaticBody2D" parent="Borders"]
position = Vector2(224, 80)
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/WorldBorder4"]
shape = SubResource("WorldBoundaryShape2D_tiqd1")

[node name="Ball" parent="." instance=ExtResource("4_3crki")]
position = Vector2(56, 88)

[node name="Enemy" parent="." instance=ExtResource("5_kjdon")]
position = Vector2(160, 88)

[node name="BallMarker" type="Marker2D" parent="."]
position = Vector2(56, 88)

[node name="Princess" parent="." instance=ExtResource("7_5dod4")]
position = Vector2(16, 88)

[connection signal="game_lost" from="." to="." method="_on_game_lost" flags=6]
[connection signal="game_won" from="." to="." method="_on_game_won" flags=6]
[connection signal="die" from="Player" to="." method="_on_player_die"]
